[feat] Finalized Socket communication